fixed button colors and alignment on both book and tents show pages

--- a/app/assets/stylesheets/components/_tent.scss
+++ b/app/assets/stylesheets/components/_tent.scss
@@ -5,7 +5,6 @@
   justify-content: space-between;
   margin: 0 auto;
 
-  margin-top: 50px;
   background: white;
 
   h2 {
